--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,7 @@
       }
     </script>
     <script type="text/javascript"> 
+      window.URL = window.URL || window.webkitURL;
       addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); 
       function hideURLbar(){ 
                 window.scrollTo(0,1); 
